--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
                         <input type="text" name="Ip_address" required>
                     </div>
                 </div>
-                <button name="submit">submit</button>
+                <button name="submit">SUBMIT</button>
+                <button name="reset">RESET</button>
             </div>
             </form>  
         <script>
