--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                         <input type="text" name="Ip_address" required>
                     </div>
                 </div>
-                <button name="submit">SUBMIT</button>
-                <button name="reset">RESET</button>
+                <input name="submit">SUBMIT</input>
+                <input name="reset">RESET</input>
             </div>
             </form>  
         <script>
