--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                         <input type="text" name="Ip_address" required>
                     </div>
                 </div>
-                <input type="submit" value="SUBMIT"></input>
-                <input type="reset" value="SUBMIT"></input>
+                <button name="submit">submit</button>
+
             </div>
             </form>  
         <script>
